--- a/client/src/views/store.html
+++ b/client/src/views/store.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="../styles/index.css">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="../">
 </head>
 <body>
-  <div class="container">
-    Hello World!
-    
+  <div class="container"> 
   </div> 
 </body>
 </html>
