--- a/client/src/views/homePage.html
+++ b/client/src/views/homePage.html
@@ -114,6 +114,15 @@
 						<span class="stat-header">CITIES</span>
 					</div>
 				</div>
+
+				<p class="stat-paragraph">
+					These numbers aren’t just milestones — they reflect the love
+					and trust of a growing community of readers. From delivering
+					books to over 120 cities to reaching half a million happy
+					readers, every order, every page, and every story shared is
+					part of something bigger. We're here to make reading more
+					accessible, exciting, and meaningful for everyone.
+				</p>
 				<span class="section-header" style="margin-top: 28rem"
 					>Our Story</span
 				>
