--- a/client/src/views/store/store.html
+++ b/client/src/views/store/store.html
@@ -18,6 +18,7 @@
 		/>
 		<link rel="stylesheet" href="../../styles/index.css" />
 		<link rel="stylesheet" href="../../styles/store/store.css" />
+		<link rel="stylesheet" href="../../styles/footer.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -26,10 +27,48 @@
 					<span class="side-bar-card-title">Categories</span>
 					<span>+</span>
 				</div>
+				<div class="side-bar-card">
+					<span class="side-bar-card-title">Author</span>
+					<span>+</span>
+				</div>
+				<div class="side-bar-card">
+					<span class="side-bar-card-title">Format</span>
+					<span>+</span>
+				</div>
+				<div class="side-bar-card">
+					<span class="side-bar-card-title">Filter by Price</span>
+					<span>+</span>
+				</div>
+				<div class="side-bar-card">
+					<span class="side-bar-card-title">By Review</span>
+					<span>+</span>
+				</div>
+				<div class="side-bar-card">
+					<span class="side-bar-card-title">Featured Books</span>
+					<span>+</span>
+				</div>
 			</div>
 
 			<div class="store-section">
-				<div class="featured"></div>
+				<div class="featured">
+					<div class="featured-left-section">
+						<span class="ghost-title">THE BOOKWORM EDITORS</span>
+						<span class="featured-title"
+							>Featured Books of
+							<br />
+							The Feburary</span
+						>
+						<button class="featured-shop-now-btn">Show Now</button>
+					</div>
+
+					<div class="featured-right-section">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+						<img
+							src="../../assets/imgs/store/book_cover.webp"
+							alt=""
+						/>
+					</div>
+				</div>
 
 				<div class="info-stuff">
 					<span> Showing 1-12 of 89 results </span>
@@ -86,12 +125,9 @@
 							<button class="buy-btn">Buy Now</button>
 						</div>
 					</div>
-					
+
 					<div class="product-card">
-						<img
-							src="../../assets/imgs/store/book_2.webp"
-							alt=""
-						/>
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
 
 						<span class="price"> $23.29 </span>
 
@@ -162,12 +198,219 @@
 							<button class="buy-btn">Buy Now</button>
 						</div>
 					</div>
-					
+
 					<div class="product-card">
-						<img
-							src="../../assets/imgs/store/book_2.webp"
-							alt=""
-						/>
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
+
+						<span class="price"> $83.29 </span>
+
+						<div class="title-heart">
+							<span class="title">
+								Mushoku Tensei (Volume XII)
+							</span>
+
+							<div>
+								<i
+									class="fa-regular fa-heart"
+									id="wishlist"
+								></i>
+							</div>
+						</div>
+
+						<div class="ratings">
+							<div class="stars">
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-solid fa-star check"></i>
+								<i class="fa-regular fa-star uncheck"></i>
+
+								<span>(4)</span>
+							</div>
+						</div>
+
+						<div class="buttons-container">
+							<button class="buy-btn">Buy Now</button>
+						</div>
+					</div>
+
+					<div class="product-card">
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
 
 						<span class="price"> $83.29 </span>
 
@@ -238,12 +481,9 @@
 							<button class="buy-btn">Buy Now</button>
 						</div>
 					</div>
-					
+
 					<div class="product-card">
-						<img
-							src="../../assets/imgs/store/book_2.webp"
-							alt=""
-						/>
+						<img src="../../assets/imgs/store/book_2.webp" alt="" />
 
 						<span class="price"> $23.29 </span>
 
@@ -276,8 +516,58 @@
 							<button class="buy-btn">Buy Now</button>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
 
+		<div class="footer">
+			<hr class="separator" />
 
+			<div class="top-section">
+				<div class="store-description">
+					<div>
+						<h2>BOOKSTORE</h2>
+						<p>
+							The largest and most complete and trusted online
+							bookstore in the world. With us you can shop online
+							& help save your high street at the same time.
+						</p>
+					</div>
+				</div>
+
+				<div class="footer-about">
+					<h3>About Bookstore</h3>
+					<div>
+						<span>Explore</span>
+						<span>Jobs</span>
+						<span>About Us</span>
+						<span>Contact Us</span>
+					</div>
+				</div>
+
+				<div class="others">
+					<h3>Others</h3>
+					<div>
+						<span>Terms and Conditions</span>
+						<span>Privacy Policy</span>
+						<span>Help Center</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="bottom-section">
+				<p class="copyright-text">
+					Copyright &copy; 2022 BookStore. All rights reserved.
+				</p>
+
+				<div class="social-links">
+					<i class="fa fa-instagram" aria-hidden="true"></i>
+
+					<i class="fa fa-facebook-square" aria-hidden="true"></i>
+
+					<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+
+					<i class="fa fa-twitter-square" aria-hidden="true"></i>
 				</div>
 			</div>
 		</div>
@@ -298,17 +588,29 @@
 				}
 			});
 
-			const wishlistIcon = document.getElementById("wishlist");
+			const wishlistIcons = document.querySelectorAll("#wishlist");
 
-			wishlistIcon.addEventListener("click", () => {
-				wishlistIcon.classList.toggle("fa-regular");
-				wishlistIcon.classList.toggle("fa-solid");
-				wishlistIcon.classList.toggle("toggled");
+			const buyButtons = document.querySelectorAll(".buy-btn")
 
-				setTimeout(() => {
-					wishlistIcon.classList.remove("toggled");
-				}, 200);
+			wishlistIcons.forEach((wishlistIcon) => {
+				wishlistIcon.addEventListener("click", () => {
+					wishlistIcon.classList.toggle("fa-regular");
+					wishlistIcon.classList.toggle("fa-solid");
+					wishlistIcon.classList.toggle("toggled");
+
+					setTimeout(() => {
+						wishlistIcon.classList.remove("toggled");
+					}, 200);
+				});
 			});
+
+			buyButtons.forEach((buybutton) => {
+				buybutton.addEventListener("click", () => {
+					window.location.href = "./single.html"
+				})
+			})
+
+
 		</script>
 	</body>
 </html>
