--- a/client/src/styles/store/single.css
+++ b/client/src/styles/store/single.css
@@ -21,6 +21,18 @@ body {
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
+
+	animation: loadAnimation 2.5s ease-out;
+}
+
+
+@keyframes loadAnimation {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
 .divider {
