--- a/client/src/styles/homePage/body.css
+++ b/client/src/styles/homePage/body.css
@@ -328,7 +328,22 @@
 	margin-top: 5rem;
 }
 
-.store-button button {
+.store-button button,
+.go-story {
 	width: 20rem;
 	height: 4rem;
+
+	background-color: var(--color-ascent);
+	color: var(--color-background);
+
+	border: 1px solid var(--color-ascent);
+
+	font-size: 1.5rem;
+
+	transition: all 0.35s ease-in-out;
+}
+
+.store-button button:hover {
+	background-color: var(--color-background);
+	color: var(--color-ascent);
 }
