--- a/client/src/styles/homePage/navbar.css
+++ b/client/src/styles/homePage/navbar.css
@@ -9,6 +9,10 @@
   padding-top: 10px;
 }
 
+#home-logo {
+  cursor: pointer;
+}
+
 .logo-wrapper {
   display: flex;
   justify-content: center;
@@ -56,7 +60,7 @@
 }
 
 #discover-button:hover {
-  background-color: var(--color-text-primary);
+  background-color: var(--color-background);
   color: var(--color-ascent);
   
   border: 2px solid var(--color-ascent);
