--- a/client/src/styles/store/single.css
+++ b/client/src/styles/store/single.css
@@ -37,7 +37,9 @@ body {
 
 .divider {
 	width: 100%;
-	margin: 5rem 0;
+	/* margin: 5rem 0; */
+	margin-bottom: 5rem;
+	margin-top: 3rem;
 	background-color: var(--color-text-secondary);
 }
 
