--- a/client/src/views/homePage.html
+++ b/client/src/views/homePage.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="container">
 			<div class="navbar">
-				<div class="logo-wrapper">
+				<div id="home-logo" class="logo-wrapper">
 					<i class="fa fa-book" aria-hidden="true"></i>
 					<span>BOOKSTORE</span>
 				</div>
